See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.37.0

              pbmtoxbm: add -name option.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              
              xbmtopbm: Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoxbm, pbmtox10bm: merge.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtox10bm: Fix generation of name in XBM file.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmnlfilt: Give proper error message for syntax errors.

              pnm_readpaminit(): abort instead of crash if width == 0.

              ppmtompeg: fix reading of GOPs.  Thanks Alun Jones.

              cmuwmtopbm, mgrtopbm, pbmtocmuwm, pbmtoicon, pbmtomgr:
              Use packed PBM functions for efficiency.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              Fix pamcomp: due to use of undefined value, sometimes produces
              plain format.

              Fix pamperspective: read all of input.

              Fix libnetpbm pm_system(): don't hang if shell command quits
              before taking all the input.

              Fix some compile failures with Irix IDO compiler.

              Build: Configure does test links to detect broken
              libpng-config --ldflags.

              Build: fix build with separate build directory.

              Build: fix merge build with no X11 library.

06.09.21 BJH  Release 10.36.0

              pbmtonokia: Add plain NPM output capability.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pbmtonokia: Pad to 8 bytes.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.
